# Grandiarchipelago

./: .gitignore  README.md
client/: CMakeLists.txt
client/Grandiarchipelago/: ap_session.cpp  ap_session.h  chest_pickup.cpp  chest_pickup.h  d3d_overlay.cpp  d3d_overlay.h  debug_mode.cpp  debug_mode.h  dllmain.cpp  game_memory.cpp  game_memory.h  hooks.cpp  hooks.h  item_tracker.cpp  item_tracker.h  location_ids.h  log.cpp  log.h  m_dat_balance.cpp  m_dat_balance.h  m_dat_redux_patch_data.h  map_overview.cpp  map_overview.h  map_travel.cpp  map_travel.h  movie_skip.cpp  movie_skip.h  party_custom.cpp  party_custom.h  pipe_bridge.cpp  pipe_bridge.h  progressions_generated.h  save_sync.cpp  save_sync.h  shop_balance.cpp  shop_balance.h  speed_turbo.cpp  speed_turbo.h  stash_watcher.cpp  stash_watcher.h  (+5 more)
client/config/: Grandiarchipelago.example.json
client/include/: known_slots.h  location_labels.h
client/launcher/: main.cpp
data/: mdp_chest_catalog.json
data/player_maps/: StoryEvents.txt  progressions.json
data/redux_spike/redux_0.4.9/GrandiaRemasteredRedux_V0.4.9/content/BATLE/: B001.BBG  B002.BBG  B003.BBG  B004.BBG  B005.BBG  B006.BBG  B007.BBG  B008.BBG  B009.BBG  B010.BBG  B011.BBG  B012.BBG  B013.BBG  B014.BBG  B015.BBG  B018.BBG  B019.BBG  B020.BBG  B021.BBG  B022.BBG  B023.BBG  B024.BBG  B025.BBG  B027.BBG  B028.BBG  B029.BBG  B030.BBG  B031.BBG  B032.BBG  B033.BBG  B034.BBG  B035.BBG  B036.BBG  B037.BBG  B038.BBG  B039.BBG  B040.BBG  B041.BBG  B042.BBG  B043.BBG  (+73 more)
data/redux_spike/redux_0.4.9/GrandiaRemasteredRedux_V0.4.9/content/FIELD/: 2012.MDP  204C.MDP  2404.MDP  2410.MDP  2C00.MDP  3C08.MDP  4400.MDP  4404.MDP  4804.MDP  4808.MDP  480C.MDP  4810.MDP  4C0C.MDP  5414.MDP  5C04.MDP  600C.MDP  6018.MDP  6400.MDP  6808.MDP  6C08.MDP  7004.MDP  7800.MDP  8004.MDP  9408.MDP  9808.MDP  9810.MDP  9C00.MDP  9C04.MDP  A000.MDP  A010.MDP  A03A.MDP  A202.MDP  A203.MDP  A244.MDP  A400.MDP  A404.MDP  AC04.MDP  B400.MDP  BC00.MDP  C400.MDP  (+12 more)
data/redux_spike/redux_0.4.9/GrandiaRemasteredRedux_V0.4.9/content/TEXT/EN/: 2012.SCN  204C.SCN  2404.SCN  2410.SCN  2C00.SCN  3C08.SCN  4400.SCN  4404.SCN  4804.SCN  4808.SCN  480C.SCN  4810.SCN  4C0C.SCN  5414.SCN  5415.SCN  5C04.SCN  600C.SCN  6018.SCN  6400.SCN  6808.SCN  6C08.SCN  7004.SCN  7408.SCN  7800.SCN  8004.SCN  9408.SCN  9808.SCN  9810.SCN  9C00.SCN  9C04.SCN  A000.SCN  A010.SCN  A03A.SCN  A202.SCN  A203.SCN  A244.SCN  A400.SCN  A404.SCN  AC04.SCN  B400.SCN  (+15 more)
tools/: build_grandia_apworld.py  sync_apworld_from_mdp_catalog.py  sync_progressions.py
worlds/grandia/: .apignore  GrandiaClient.py  Items.py  Items_data.py  Keys_data.py  Locations.py  Locations_data.py  OptionalDungeons_data.py  Options.py  Regions.py  Rules.py  __init__.py  archipelago.json  dll_inject.py  game_pipe.py
worlds/grandia/data/: mdp_chest_catalog.json  progressions.json
worlds/grandia/docs/: player_example.yaml  setup_en.md
worlds/grandia/native/: .gitignore  README.txt
